Fix T70386: Crash when snapping to edges in specific situations

The callbacks get elements through indexes,
so make sure they're not "dirty".